crates/specforge-mcp/tests/snapshots/tests__prompt_golden__01_list.snap
---
source: crates/specforge-mcp/tests/prompt_golden.rs
expression: "reply[\"result\"]"
---
{
  "prompts": [
    {
      "arguments": [
        {
          "description": "Entity ID to get context for",
          "name": "entity_id",
          "required": true
        },
        {
          "description": "Entity IDs to include as context even when not connected (array or comma-separated)",
          "name": "structural_constraints",
          "required": false
        }
      ],
      "description": "Get structured context for implementing an entity",
      "name": "specforge://prompts/context"
    },
    {
      "arguments": [
        {
          "description": "Entity ID to review (optional, reviews all if omitted)",
          "name": "entity_id",
          "required": false
        },
        {
          "description": "Neighbor hops around entity_id to include (default 1)",
          "name": "depth",
          "required": false
        }
      ],
      "description": "Analyze coverage gaps for an entity or the whole graph",
      "name": "specforge://prompts/review"
    },
    {
      "arguments": [
        {
          "description": "AgentPlan JSON ({\"entries\": [{\"entity_id\", \"action\"}]}) to check against the graph",
          "name": "plan",
          "required": false
        },
        {
          "description": "Entity ID to trace when no plan is given",
          "name": "entity_id",
          "required": false
        }
      ],
      "description": "Identify traceability gaps for a plan",
      "name": "specforge://prompts/trace"
    },
    {
      "arguments": [
        {
          "description": "Starting entity (optional)",
          "name": "entity_id",
          "required": false
        },
        {
          "description": "Filter by entity kind",
          "name": "kind",
          "required": false
        }
      ],
      "description": "Discover exploration starting points in the graph",
      "name": "specforge://prompts/explore"
    },
    {
      "arguments": [
        {
          "description": "Scope: omit for overview, 'kind:{name}' for focused guide, 'file:{path}' for file deduplication",
          "name": "scope",
          "required": false
        },
        {
          "description": "Directory where generated .spec files are written (scope \"plan\")",
          "name": "target_spec_directory",
          "required": false
        },
        {
          "description": "Offset into the plan's unanalyzed/stale file lists for paging (scope \"plan\")",
          "name": "cursor",
          "required": false
        }
      ],
      "description": "Get inference guidance for discovering spec entities from code",
      "name": "specforge://prompts/infer"
    }
  ]
}
