crates/specforge-mcp/tests/snapshots/tests__prompt_golden__02_context_alpha.snap
---
source: crates/specforge-mcp/tests/prompt_golden.rs
expression: "shape(&reply, dir.path())"
---
{
  "instruction": "You are implementing the entity 'alpha' (kind: behavior). Use the structured context below to guide your implementation. Respect the contract (or the guarantee, rationale or other text in its fields), satisfy verify expectations, and consider upstream/downstream dependencies.",
  "layout": "turns",
  "payload": {
    "contract_text": "first",
    "downstream_entities": [
      "feat_login"
    ],
    "entity_id": "alpha",
    "fields": {
      "contract": "first",
      "features": [
        "feat_login"
      ],
      "verify": [
        {
          "description": "alpha works",
          "kind": "unit"
        }
      ]
    },
    "kind": "behavior",
    "structural_constraint_entities": [],
    "structural_constraints": [],
    "upstream_entities": [],
    "verify_expectations": [
      "unit alpha works"
    ]
  },
  "roles": [
    "user",
    "assistant"
  ]
}
