crates/specforge-mcp/tests/snapshots/tests__prompt_golden__05_context_constraint_ghost.snap
---
source: crates/specforge-mcp/tests/prompt_golden.rs
expression: "shape(&reply, dir.path())"
---
{
  "error": {
    "code": -32602,
    "message": "Structural constraint entity not found: ghost"
  }
}
