crates/specforge-mcp/tests/snapshots/tests__prompt_golden__06_context_no_arguments.snap
---
source: crates/specforge-mcp/tests/prompt_golden.rs
expression: "shape(&reply, dir.path())"
---
{
  "error": {
    "code": -32602,
    "data": {
      "argument": "entity_id",
      "code": "invalid_input",
      "message": "Missing required parameter: entity_id",
      "prompt": "specforge://prompts/context"
    },
    "message": "Missing required parameter: entity_id"
  }
}
