crates/specforge-mcp/tests/snapshots/tests__prompt_golden__07_context_entity_id_number.snap
---
source: crates/specforge-mcp/tests/prompt_golden.rs
expression: "shape(&reply, dir.path())"
---
{
  "error": {
    "code": -32602,
    "message": "Missing required argument: entity_id"
  }
}
