crates/specforge-mcp/tests/snapshots/tests__prompt_golden__12_review_ghost.snap
---
source: crates/specforge-mcp/tests/prompt_golden.rs
expression: "shape(&reply, dir.path())"
---
{
  "error": {
    "code": -32602,
    "data": {
      "code": "entity_not_found",
      "diagnostic": {
        "code": "E003",
        "column": null,
        "file": null,
        "line": null,
        "message": "unresolved entity 'ghost' — not found in graph",
        "severity": "Error",
        "span": null,
        "suggestion": null,
        "title": "Unresolved reference"
      },
      "entity_id": "ghost",
      "message": "unresolved entity 'ghost' — not found in graph",
      "prompt": "specforge://prompts/review"
    },
    "message": "unresolved entity 'ghost' — not found in graph"
  }
}
